all pages acceptable mobile responsive, portfolio images fit on screen, card images take up entire screen on small devices so that page does not look to busy. Small bugs still working out, navbar slightly offcenter on md-sm, footer refusing to stay at bottom without odd tweaks. Otherwise completed fully and functions as intended

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,11 @@
   border-right: 1px solid #cccccc;
 }
 
-.nav {
+/* .nav {
   margin-top: 20px;
   margin-bottom: 20px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
+} */
 
 .topper {
   border-bottom: 3px solid #cccccc;
@@ -30,18 +30,17 @@ hr {
 
 body {
   background-image: url("../images/crossline-dots.png");
-  padding: 0px;
+  padding-bottom: 100px;
 }
 
 .footer {
   background-color: #666666;
   color: #cccccc;
-  position: static;
+  position: absolute;
   bottom: 0;
   left: 0;
   margin-top: 50px;
   border-top: 5px solid #4aaaa5;
-  clear:both;
 }
 
 .content {
@@ -67,7 +66,8 @@ label {
 }
 
 .card-img {
-  max-width: 300px;
+  max-width: 35%;
+  min-width: 25%;
   float: left;
   margin-right: 20px;
 }
@@ -83,10 +83,12 @@ label {
   display: block;
   margin: auto;
   padding: 10px;
-}
+max-width: 300px;
+  max-height: 320px;
+  min-height: 320px;
+  border: 2px ridge #777777;
+  border-radius: 10px;
 
-html{
-  position: static;
 }
 
 .banner{
@@ -110,11 +112,7 @@ html{
 }
 
 img{
-  max-width: 300px;
-  max-height: 320px;
-  min-height: 320px;
-  border: 2px ridge #777777;
-  border-radius: 10px;
+  
 }
 
 a{
@@ -128,3 +126,21 @@ a:hover{
   text-decoration: none;
   color: #666666;
 }
+
+
+
+html{
+  position: relative;
+   min-height: 100vh;
+   overflow: auto;
+   display: inline-block;
+
+}
+
+.container-fluid {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: auto;
+  display: inline-block;
+  position: relative;
+  
+ }
